--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "oj",
   "license": "ISC",
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "three": "^0.71.0"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
