--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "oj",
   "license": "ISC",
   "dependencies": {
+    "getusermedia": "^2.0.1",
+    "node-static": "^0.7.11",
     "react": "^0.13.3",
     "three": "^0.71.0"
   },
